--- a/C3W2_Assignment_ipynb의_사본.ipynb
+++ b/C3W2_Assignment_ipynb의_사본.ipynb
@@ -256,16 +256,16 @@
       "source": [
         "### START CODE HERE (Replace Instances of `None` with your code) ###\n",
         "# import the label map utility module\n",
-        "from None import None\n",
+        "from object_detection.utils import label_map_util\n",
         "\n",
         "# import module for reading and updating configuration files.\n",
-        "from None import None\n",
+        "from object_detection.utils  import config_util\n",
         "\n",
         "# import module for visualization. use the alias `viz_utils`\n",
-        "from None import None as None\n",
+        "from object_detection.utils  import visualization_utils as viz_utils\n",
         "\n",
         "# import module for building the detection model\n",
-        "from None import None\n",
+        "from object_detection.builders import model_builder\n",
         "### END CODE HERE ###\n",
         "\n",
         "# import module for utilities in Colab\n",
@@ -436,13 +436,13 @@
         "train_image_dir = './training'\n",
         "\n",
         "# declare an empty list\n",
-        "train_images_np = None\n",
+        "train_images_np = []\n",
         "\n",
         "# run a for loop for each image\n",
         "for i in range(1, 6):\n",
         "\n",
         "    # define the path (string) for each image\n",
-        "    image_path = os.path.join(None)\n",
+        "    image_path = os.path.join(train_image_dir, 'training-zombie'+str(i)+'.jpg' )\n",
         "    print(image_path)\n",
         "\n",
         "    # load images into numpy arrays and append to a list\n",
@@ -699,13 +699,13 @@
         "### START CODE HERE (Replace instances of `None` with your code ###\n",
         "\n",
         "# Assign the zombie class ID\n",
-        "zombie_class_id = None\n",
+        "zombie_class_id = 1\n",
         "\n",
         "# define a dictionary describing the zombie class\n",
-        "category_index = None\n",
+        "category_index = {zombie_class_id:{'id':zombie_class_id, 'name':'zombie'}}\n",
         "\n",
         "# Specify the number of classes that the model will predict\n",
-        "num_classes = None\n",
+        "num_classes = 1\n",
         "### END CODE HERE ###"
       ],
       "execution_count": null,
@@ -788,6 +788,19 @@
         "\n",
         "print('Done prepping data.')"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(train_image_tensors[0].shape)\n",
+        "print(gt_classes_one_hot_tensors[0].shape)\n",
+        "print(gt_box_tensors[0].shape)\n"
+      ],
+      "metadata": {
+        "id": "_OmXsy9RquxR"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -964,13 +977,14 @@
         "\n",
         "### START CODE HERE ###\n",
         "# Download the SSD Resnet 50 version 1, 640x640 checkpoint\n",
-        "None\n",
-        "    \n",
-        "# untar (decompress) the tar file\n",
-        "None\n",
+        "!wget http://download.tensorflow.org/models/object_detection/tf2/20200711/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.tar.gz\n",
         "\n",
-        "# copy the checkpoint to the test_data folder models/research/object_detection/test_data/\n",
-        "None\n",
+        "\n",
+        "# untar (decompress) the tar file\n",
+        "!tar -xf ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.tar.gz\n",
+        "\n",
+        "# # copy the checkpoint to the test_data folder models/research/object_detection/test_data/\n",
+        "!mv ssd_resnet50_v1_fpn_640x640_coco17_tpu-8/checkpoint models/research/object_detection/test_data/\n",
         "\n",
         "### END CODE HERE"
       ],
@@ -1026,10 +1040,10 @@
         "\n",
         "### START CODE HERE ###\n",
         "# define the path to the .config file for ssd resnet 50 v1 640x640\n",
-        "pipeline_config = None\n",
+        "pipeline_config = 'models/research/object_detection/configs/tf2/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.config'\n",
         "\n",
         "# Load the configuration file into a dictionary\n",
-        "configs = None\n",
+        "configs = config_util.get_configs_from_pipeline_file(pipeline_config)\n",
         "\n",
         "### END CODE HERE ###\n",
         "# See what configs looks like\n",
@@ -1077,7 +1091,10 @@
       "source": [
         "### START CODE HERE ###\n",
         "# Read in the object stored at the key 'model' of the configs dictionary\n",
-        "model_config = None\n",
+        "model_config = configs['model']\n",
+        "\n",
+        "print(type(configs))\n",
+        "print(type(model_config))\n",
         "\n",
         "### END CODE HERE\n",
         "# see what model_config looks like\n",
@@ -1111,10 +1128,10 @@
       "source": [
         "### START CODE HERE ###\n",
         "# Modify the number of classes from its default of 90\n",
-        "None = None\n",
+        "model_config.ssd.num_classes = num_classes\n",
         "\n",
         "# Freeze batch normalization\n",
-        "None = None\n",
+        "model_config.ssd.freeze_batchnorm = True\n",
         "\n",
         "### END CODE HERE\n",
         "\n",
@@ -1166,7 +1183,7 @@
       },
       "source": [
         "### START CODE HERE (Replace instances of `None` with your code) ###\n",
-        "detection_model = None\n",
+        "detection_model = model_builder.build(model_config, True, )\n",
         "### END CODE HERE ###\n",
         "\n",
         "print(type(detection_model))"
@@ -1532,8 +1549,10 @@
       "source": [
         "### START CODE HERE ###\n",
         "\n",
-        "tmp_box_predictor_checkpoint = None\n",
-        "    \n",
+        "tmp_box_predictor_checkpoint = tf.train.Checkpoint(\n",
+        "  _base_tower_layers_for_heads=detection_model._box_predictor._base_tower_layers_for_heads,\n",
+        "  _box_prediction_head=detection_model._box_predictor._box_prediction_head,\n",
+        ")\n",
         "    \n",
         "\n",
         "### END CODE HERE"
@@ -1607,8 +1626,9 @@
       "source": [
         "### START CODE HERE ###\n",
         "\n",
-        "tmp_model_checkpoint = None\n",
-        "          \n",
+        "tmp_model_checkpoint = tf.train.Checkpoint(\n",
+        "          _feature_extractor=detection_model._feature_extractor,\n",
+        "          _box_predictor=tmp_box_predictor_checkpoint)\n",
         "          \n",
         "\n",
         "### END CODE HERE ###"
@@ -1700,13 +1720,13 @@
       "source": [
         "### START CODE HERE ###\n",
         "\n",
-        "checkpoint_path = None\n",
+        "checkpoint_path = 'models/research/object_detection/test_data/checkpoint/ckpt-0'\n",
         "\n",
         "# Define a checkpoint that sets `model` to the temporary model checkpoint\n",
-        "checkpoint = None\n",
+        "checkpoint = tf.train.Checkpoint(model=tmp_model_checkpoint)\n",
         "\n",
         "# Restore the checkpoint to the checkpoint path\n",
-        "None\n",
+        "checkpoint.restore(checkpoint_path).expect_partial()\n",
         "\n",
         "### END CODE HERE ###"
       ],
@@ -1756,13 +1776,13 @@
         "### START CODE HERE (Replace instances of `None` with your code)###\n",
         "\n",
         "# use the detection model's `preprocess()` method and pass a dummy image\n",
-        "tmp_image, tmp_shapes = None\n",
+        "tmp_image, tmp_shapes = detection_model.preprocess(tf.zeros([1, 640, 640, 3]))\n",
         "\n",
         "# run a prediction with the preprocessed image and shapes\n",
-        "tmp_prediction_dict = None\n",
+        "tmp_prediction_dict = detection_model.predict(tmp_image, tmp_shapes)\n",
         "\n",
         "# postprocess the predictions into final detections\n",
-        "tmp_detections = None\n",
+        "tmp_detections = detection_model.postprocess(tmp_prediction_dict, tmp_shapes)\n",
         "\n",
         "### END CODE HERE ###\n",
         "\n",
@@ -1849,16 +1869,16 @@
         "### START CODE HERE (Replace instances of `None` with your code)###\n",
         "\n",
         "# set the batch_size\n",
-        "batch_size = None\n",
+        "batch_size = 4\n",
         "\n",
         "# set the number of batches\n",
-        "num_batches = None\n",
+        "num_batches = 100\n",
         "\n",
         "# Set the learning rate\n",
-        "learning_rate = None\n",
+        "learning_rate = 0.01\n",
         "\n",
         "# set the optimizer and pass in the learning_rate\n",
-        "optimizer = None\n",
+        "optimizer = tf.keras.optimizers.SGD(learning_rate=learning_rate, momentum=0.9)\n",
         "\n",
         "### END CODE HERE ###"
       ],
@@ -1958,12 +1978,16 @@
         "### START CODE HERE (Replace instances of `None` with your code) ###\n",
         "\n",
         "# define a list that contains the layers that you wish to fine tune\n",
-        "to_fine_tune = None\n",
+        "to_fine_tune = []\n",
+        "prefixes_to_train = [\n",
+        "  'WeightSharedConvolutionalBoxPredictor/WeightSharedConvolutionalBoxHead',\n",
+        "  'WeightSharedConvolutionalBoxPredictor/WeightSharedConvolutionalClassHead']\n",
+        "for v in detection_model.trainable_variables:\n",
+        "  if any([v.name.startswith(x) for x in prefixes_to_train]):\n",
+        "    to_fine_tune.append(v)\n",
         "\n",
         "\n",
         "\n",
-        "\n",
-        "]\n",
         "\n",
         "### END CODE HERE"
       ],
@@ -1979,7 +2003,9 @@
         "# Test Code:\n",
         "\n",
         "print(to_fine_tune[0].name)\n",
-        "print(to_fine_tune[2].name)"
+        "print(to_fine_tune[1].name)\n",
+        "print(to_fine_tune[2].name)\n",
+        "print(to_fine_tune[3].name)"
       ],
       "execution_count": null,
       "outputs": []
@@ -2461,41 +2487,46 @@
         "    Returns:\n",
         "      A scalar tensor representing the total loss for the input batch.\n",
         "    \"\"\"\n",
-        "\n",
+        "    model.provide_groundtruth(\n",
+        "        groundtruth_boxes_list=groundtruth_boxes_list,\n",
+        "        groundtruth_classes_list=groundtruth_classes_list)\n",
+        "    \n",
         "    with tf.GradientTape() as tape:\n",
-        "    ### START CODE HERE (Replace instances of `None` with your code) ###\n",
+        "    ### START CODE HERE (Replace instances of `None` with your code) ##\n",
+        "      preprocessed_image_list = []\n",
+        "      true_shape_list = []\n",
         "\n",
-        "        # Preprocess the images\n",
-        "        \n",
-        "        \n",
+        "      for img in image_list:\n",
+        "        processed_img, true_shape = model.preprocess(img)\n",
+        "        # print(true_shape)\n",
+        "        preprocessed_image_list.append(processed_img)\n",
+        "        true_shape_list.append(true_shape)\n",
         "\n",
         "\n",
+        "      # Preprocess the images\n",
+        "      preprocessed_image_tensor = tf.concat(preprocessed_image_list, axis=0)\n",
+        "      \n",
+        "      true_shape_tensor = tf.concat(true_shape_list, axis=0)\n",
+        "\n",
+        "      # Make a prediction\n",
+        "      prediction_dict = model.predict(preprocessed_image_tensor, true_shape_tensor)\n",
+        "\n",
+        "      # Calculate the total loss (sum of both losses)\n",
+        "      losses_dict = model.loss(prediction_dict, true_shape_tensor)\n",
         "            \n",
         "            \n",
-        "            \n",
-        "\n",
-        "        preprocessed_image_tensor = None\n",
-        "        true_shape_tensor = None\n",
-        "\n",
-        "        # Make a prediction\n",
-        "        prediction_dict = None\n",
-        "\n",
-        "        # Calculate the total loss (sum of both losses)\n",
-        "        \n",
-        "            \n",
-        "            \n",
         "        \n",
         "\n",
         "        \n",
-        "        total_loss = None\n",
+        "      total_loss = losses_dict['Loss/localization_loss'] + losses_dict['Loss/classification_loss']\n",
         "\n",
-        "        # Calculate the gradients\n",
-        "        gradients = None\n",
+        "      # Calculate the gradients\n",
+        "      gradients = tape.gradient(total_loss, vars_to_fine_tune)\n",
         "\n",
-        "        # Optimize the model's selected variables\n",
-        "        \n",
+        "      # Optimize the model's selected variables\n",
+        "      optimizer.apply_gradients(zip(gradients, vars_to_fine_tune))\n",
         "\n",
-        "        ### END CODE HERE ###\n",
+        "      ### END CODE HERE ###\n",
         "        \n",
         "    return total_loss"
       ],
@@ -2681,7 +2712,7 @@
         "    \n",
         "    ### START CODE HERE (Replace instances of `None` with your code) ###\n",
         "    # use the detection model's postprocess() method to get the the final detections\n",
-        "    detections = None\n",
+        "    detections = detection_model.postprocess(prediction_dict, shapes)\n",
         "    ### END CODE HERE ###\n",
         "    \n",
         "    return detections"
